fix(banner): changed the padding/margin of the close-btn and icon to align with design

--- a/components/src/components/banner/banner.scss
+++ b/components/src/components/banner/banner.scss
@@ -33,6 +33,8 @@ html {
   margin-right: var(--sdds-spacing-element-12);
   font-size: 4rem;
   color: var(--sdds-banner-prefix-default-color);
+  margin-top: -2px;
+  padding-left: 4px;
 
   .sdds-banner-info & {
     color: var(--sdds-banner-prefix-info-color);
@@ -56,6 +58,8 @@ html {
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  margin-top: -2px;
+  margin-right: 4px;
 }
 
 .sdds-banner-header {
